Created Cooking Mate Post

--- a/client/src/posts/api-post.mdx
+++ b/client/src/posts/api-post.mdx
@@ -4,6 +4,8 @@ date: "2025-07-11"
 slug: "happy-post"
 ---
 
+![API Image](../images/api-diagram.jpg)
+
 Welcome to my first MDX blog post! 🎉
 
 This is where I share my thoughts as I learn more about Gatsby and web development.
